--- a/balacne.html
+++ b/balacne.html
@@ -107,6 +107,7 @@
               </div>
             </div>
           </button>
+          <div class="pustota"></div>
         </div>
 
     </section>
