--- a/index.html
+++ b/index.html
@@ -19,10 +19,22 @@
             </div>
 
             <div class="head__end">
-                <div class="head__button__balance"><a href="./balacne.html"> <div class="block"><img src="./images/plusCS.svg" alt="Добавить токен"></div>
-                    <div class="head__text">Пополнить баланс</div></a>
+                <div class="head__button__balance"><a href="./balacne.html">
+                    <div class="block">
+                        <button class="round">
+                            <img src="./images/plusss.svg" alt="Поиск">
+                        </button>
+<!--                        <img src="./images/plusCS.svg" alt="Добавить токен"></div>-->
+                    <div class="head__text">Пополнить баланс</div>
+
+                </a>
                 </div>
-                <div class="head__button__friends"> <a href="#"> <div class="block"><img src="./images/shareCS.svg" alt="Поделиться"></div>
+                <div class="head__button__friends"> <a href="#">
+                    <div class="block">
+                            <button class="round">
+                        <img src="./images/shareee.svg" alt="Поделиться">
+                            </button>
+                    </div>
                     <div class="head__text"> Пригласить друзей и <br>
                      получить бесплатно</div></a>
                 </div>
@@ -32,7 +44,7 @@
     <section class="main">
         <div class="main__wrapper">
                 <div class="main__button__mode1"> <a  class="main__button__mode" href="#">
-                     <img src="./images/modew.svg" alt="Режим GPT">
+                    <img src="./images/modew.svg" alt="Режим GPT">
                     <div class="main__text"> РЕЖИМ</div> </a>
                     </div>
                 <div class="main__button__mode1"> <a  class="main__button__mode" href="#">
@@ -40,6 +52,7 @@
                     <div class="main__text"> ВЕРСИЯ GPT</div> </a>
                     </div>
                 <div class="main__button__mode1"> <a  class="main__button__mode" href="#">
+
                      <img src="./images/dialogw.svg" alt="Режим GPT">
                     <div class="main__text"> НОВЫЙ ДИАЛОГ</div> </a>
                     </div>
